RESOLVED FIXED204194
Automation: scrollIntoView should do nothing if element is visible
https://bugs.webkit.org/show_bug.cgi?id=204194
Summary Automation: scrollIntoView should do nothing if element is visible
Carlos Garcia Campos
Reported 2019-11-14 01:30:47 PST
Even if it's partially visible, see https://w3c.github.io/webdriver/#dfn-scrolls-into-view This is causing several tests failures: imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[9] imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[8] imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[7] imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[6] imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[5] imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[4] imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[3] imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[2] imported/w3c/webdriver/tests/element_click/scroll_into_view.py::test_partially_visible_does_not_scroll[1]
Attachments
Patch (2.85 KB, patch)
2019-11-14 01:37 PST, Carlos Garcia Campos
no flags
Archive of layout-test-results from ews213 for win-future (14.08 MB, application/zip)
2019-11-14 03:15 PST, EWS Watchlist
no flags
Patch (15.90 KB, patch)
2019-11-18 13:14 PST, Andres Gonzalez
no flags
Carlos Garcia Campos
Comment 1 2019-11-14 01:37:16 PST
EWS Watchlist
Comment 2 2019-11-14 03:15:11 PST
Comment on attachment 383548 [details] Patch Attachment 383548 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/13253947 New failing tests: http/tests/misc/repeat-open-cancel.html
EWS Watchlist
Comment 3 2019-11-14 03:15:13 PST
Created attachment 383551 [details] Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Carlos Garcia Campos
Comment 4 2019-11-18 00:40:46 PST
Radar WebKit Bug Importer
Comment 5 2019-11-18 00:41:21 PST
Andres Gonzalez
Comment 6 2019-11-18 13:14:16 PST
Reopening to attach new patch.
Andres Gonzalez
Comment 7 2019-11-18 13:14:18 PST
Andres Gonzalez
Comment 8 2019-11-18 13:16:57 PST
Ignore this patch, uploaded to wrong bug.
Note You need to log in before you can comment on or make changes to this bug.